# PokerData

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
headers/: bboxes.h  board.h  buffer.h  card.h  events.h  exception.h  human.h  observe.h  output.h  player.h  recognition.h  text.h  timer.h  vars.h  video.h
res/: videos.txt
res/yolo/: model.weights  model_digits.weights  voc.names  yolov3-voc.cfg  yolov3-voc_digits.cfg
src/: bboxes.cpp  board.cpp  card.cpp  events.cpp  exception.cpp  human.cpp  main.cpp  output.cpp  player.cpp  recognition.cpp  text.cpp  timer.cpp  vars.cpp  video.cpp
src/observe/: actions.cpp  events.cpp  misc.cpp  observe.cpp
