cmake_minimum_required(VERSION 3.0)
project(PD)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(Tesseract_LIBRARIES tesseract)
find_package(OpenCV REQUIRED)
find_package(Tesseract QUIET)
link_directories(${LEPTONICA_LIBRARY_DIRS} /usr/local/lib)
include_directories(${OpenCV_INCLUDE_DIRS} ${Leptonica_INCLUDE_DIRS} ${Tesseract_INCLUDE_DIRS})
add_executable(PD src/bboxes.cpp src/board.cpp src/card.cpp src/main.cpp src/observe/observe.cpp src/observe/events.cpp src/observe/misc.cpp src/observe/actions.cpp src/player.cpp src/text.cpp src/vars.cpp src/video.cpp Poker/card.cpp Poker/combination.cpp Poker/deck.cpp Poker/game.cpp Poker/player.cpp Poker/vars.cpp)
target_link_libraries(PD ${OpenCV_LIBS} ${Leptonica_LIBRARIES} ${Tesseract_LIBRARIES} lept tesseract)
